style.css
:root{
  /* colors */
  --clr-primary: #F97316 ;
  --clr-secondary:#6366F1;
  --clr-background:#F3F4F6;
  --clr-surface:#FFFFFF;
  --clr-text-primary:#111827;
  --clr-text-secondary:#6B7280;
  --clr-red-600:#DC2626;

  /* font families */
  --ff-heading: "Space Grotesk", sans-serif;
  --ff-text: "Roboto", sans-serif;

}

*, *::before, *::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  height: 100dvh;

}
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}
#root, #__next {
  isolation: isolate;
}

main{
  display: grid;
  grid-template-columns: 1fr 5fr;
  height: 100%;
}

.projects-container,
.search-bar,
.dashboard-header{
  grid-column: 2 / 3;
}

.side-bar{
  display: grid;
  grid-template-rows: 1fr 3fr 2fr 1fr;
  gap: 30px;
}

.grid-row-span-1{
  grid-row: span 1;
}

ul{
  list-style-type: none;
}

.icon{
  width: 20px;
  height: 20px;
}

